--- a/rules.conf
+++ b/rules.conf
@@ -27,27 +27,74 @@ SG = custom, 1.2.3.4, 40004, aes-256-cfb, password, https://github.com/GitHubLib
 Proxy = select,Default,SG
 
 [Rule]
-# Accelerate most visited sites, part 1
-DOMAIN-KEYWORD, ali, DIRECT
-DOMAIN-KEYWORD, taobao, DIRECT
-DOMAIN, weixin.qq.com, DIRECT
-DOMAIN-KEYWORD, weibo, DIRECT
-DOMAIN-KEYWORD, didi, DIRECT
+// iOS
+DOMAIN-SUFFIX,lcdn-registration.apple.com,DIRECT
+DOMAIN-SUFFIX,ls.apple.com,DIRECT
 
-# Block privacy tracker within apps
-DOMAIN, monitor.uu.qq.com, REJECT
-DOMAIN, pagead2.googlesyndication.com, REJECT
-DOMAIN, cpro.baidu.com, REJECT
-DOMAIN, pingma.qq.com, REJECT
-DOMAIN, stat.m.jd.com, REJECT
-DOMAIN, ads.mopub.com, REJECT
+// AD Block
+DOMAIN-KEYWORD,adsmogo,REJECT
+
+DOMAIN-SUFFIX,acs86.com,REJECT
+DOMAIN-SUFFIX,adcome.cn,REJECT
+DOMAIN-SUFFIX,adinfuse.com,REJECT
+DOMAIN-SUFFIX,admaster.com.cn,REJECT
+DOMAIN-SUFFIX,admob.com,REJECT
+DOMAIN-SUFFIX,adsage.cn,REJECT
+DOMAIN-SUFFIX,adsage.com,REJECT
+DOMAIN-SUFFIX,adsmogo.org,REJECT
+DOMAIN-SUFFIX,ads.mobclix.com,REJECT
+DOMAIN-SUFFIX,adview.cn,REJECT
+DOMAIN-SUFFIX,adwhirl.com,REJECT
+DOMAIN-SUFFIX,adwo.com,REJECT
+DOMAIN-SUFFIX,appads.com,REJECT
+DOMAIN-SUFFIX,domob.cn,REJECT
+DOMAIN-SUFFIX,domob.com.cn,REJECT
+DOMAIN-SUFFIX,domob.org,REJECT
+DOMAIN-SUFFIX,doubleclick.net,REJECT
+DOMAIN-SUFFIX,duomeng.cn,REJECT
+DOMAIN-SUFFIX,duomeng.net,REJECT
+DOMAIN-SUFFIX,duomeng.org,REJECT
+DOMAIN-SUFFIX,googeadsserving.cn,REJECT
+DOMAIN-SUFFIX,guomob.com,REJECT
+DOMAIN-SUFFIX,immob.cn,REJECT
+DOMAIN-SUFFIX,inmobi.com,REJECT
+DOMAIN-SUFFIX,mobads.baidu.com,REJECT
+DOMAIN-SUFFIX,mobads-logs.baidu.com,REJECT
+DOMAIN-SUFFIX,reachmax.cn,REJECT
+DOMAIN-SUFFIX,smartadserver.com,REJECT
+DOMAIN-SUFFIX,tapjoyads.com,REJECT
+DOMAIN-SUFFIX,umeng.co,REJECT
+DOMAIN-SUFFIX,umeng.com,REJECT
+DOMAIN-SUFFIX,umtrack.com,REJECT
+DOMAIN-SUFFIX,uyunad.com,REJECT
+DOMAIN-SUFFIX,xiaozhen.com,REJECT
+DOMAIN-SUFFIX,youmi.net,REJECT
 
 # Prevent stream services from displaying ads
 DOMAIN, ad.api.3g.youku.com, REJECT
 DOMAIN, atm.youku.com, REJECT
+
 DOMAIN, lives.l.qq.com, REJECT
-DOMAIN, ark.letv.com, REJECT
 DOMAIN, asimgs.pplive.cn, REJECT
+
+DOMAIN,ad.api.3g.tudou.com,REJECT
+DOMAIN,adcontrol.tudou.com,REJECT
+DOMAIN,adplay.tudou.com,REJECT
+DOMAIN,stat.tudou.com,REJECT
+DOMAIN,stats.tudou.com,REJECT
+     
+DOMAIN, ark.letv.com, REJECT
+DOMAIN,n.mark.letv.com,REJECT
+DOMAIN,dc.letv.com,REJECT
+DOMAIN,fz.letv.com,REJECT
+DOMAIN,pro.letv.com,REJECT
+DOMAIN,plog.dc.letv.com,REJECT
+DOMAIN,dev.dc.letv.com,REJECT
+
+DOMAIN,meta.video.qiyi.com,REJECT
+DOMAIN,data.video.qiyi.com,REJECT
+DOMAIN,api.cupid.iqiyi.com,REJECT
+DOMAIN,paopao.iqiyi.com,REJECT
 
 # Disable customized fonts
 DOMAIN, fonts.googleapis.com, REJECT
@@ -67,25 +114,42 @@ DOMAIN-SUFFIX, mob.com, REJECT
 DOMAIN-SUFFIX, 127.net, REJECT
 DOMAIN-SUFFIX, sinajs.cn, REJECT
 
-# Accelerate most visited sites, part 2
-DOMAIN, ele.me, DIRECT
-DOMAIN, elemecdn.com, DIRECT
-DOMAIN, baby.360.cn, DIRECT
-DOMAIN, jianshuapi.com, DIRECT
-DOMAIN-KEYWORD, live.com, DIRECT
-DOMAIN-KEYWORD, ele.me, DIRECT
+# Accelerate most visited sites
+// All .cn sites
+DOMAIN-SUFFIX,cn,DIRECT
 
-DOMAIN-SUFFIX, cn, DIRECT
-DOMAIN-SUFFIX, qq.com, DIRECT
-DOMAIN-SUFFIX, jd.com, DIRECT
-DOMAIN-SUFFIX, 163.com, DIRECT
-DOMAIN-SUFFIX, 126.net, DIRECT
-DOMAIN-SUFFIX, netease.com, DIRECT
-DOMAIN-SUFFIX, gtimg.com, DIRECT
-DOMAIN-KEYWORD, tietuku, DIRECT
-DOMAIN-KEYWORD, baidu, DIRECT
-DOMAIN-KEYWORD, 360, DIRECT
-DOMAIN-KEYWORD, sina, DIRECT
+// Top cn sites
+DOMAIN-KEYWORD,360buy,DIRECT
+DOMAIN-KEYWORD,alipay,DIRECT
+DOMAIN-KEYWORD,baidu,DIRECT
+DOMAIN-KEYWORD,taobao,DIRECT
+
+DOMAIN-SUFFIX,tmall.com,DIRECT
+DOMAIN-SUFFIX,126.net,DIRECT
+DOMAIN-SUFFIX,163.com,DIRECT
+DOMAIN-SUFFIX,alicdn.com,DIRECT
+DOMAIN-SUFFIX,amap.com,DIRECT
+DOMAIN-SUFFIX,bdimg.com,DIRECT
+DOMAIN-SUFFIX,bdstatic.com,DIRECT
+DOMAIN-SUFFIX,cnbeta.com,DIRECT
+DOMAIN-SUFFIX,cnzz.com,DIRECT
+DOMAIN-SUFFIX,douban.com,DIRECT
+DOMAIN-SUFFIX,gtimg.com,DIRECT
+DOMAIN-SUFFIX,ifeng.com,DIRECT
+DOMAIN-SUFFIX,iqiyi.com,DIRECT
+DOMAIN-SUFFIX,jd.com,DIRECT
+DOMAIN-SUFFIX,netease.com,DIRECT
+DOMAIN-SUFFIX,qhimg.com,DIRECT
+DOMAIN-SUFFIX,qq.com,DIRECT
+DOMAIN-SUFFIX,sogou.com,DIRECT
+DOMAIN-SUFFIX,sohu.com,DIRECT
+DOMAIN-SUFFIX,soso.com,DIRECT
+DOMAIN-SUFFIX,suning.com,DIRECT
+DOMAIN-SUFFIX,tudou.com,DIRECT
+DOMAIN-SUFFIX,weibo.com,DIRECT
+DOMAIN-SUFFIX,youku.com,DIRECT
+DOMAIN-SUFFIX,xunlei.com,DIRECT
+DOMAIN-SUFFIX,zhihu.com,DIRECT
 
 # Some services are available locally
 DOMAIN-SUFFIX, ls.apple.com, DIRECT
@@ -93,14 +157,10 @@ DOMAIN-SUFFIX, itunes.apple.com, DIRECT
 DOMAIN-SUFFIX, dl.google.com, DIRECT
 
 # Apple services
-DOMAIN-SUFFIX, apple.com, Proxy
-DOMAIN-SUFFIX, icloud.com, Proxy
+DOMAIN-SUFFIX, apple.com, DIRECT
+DOMAIN-SUFFIX, icloud.com, DIRECT
 DOMAIN-SUFFIX, mzstatic.com, Proxy
 DOMAIN-KEYWORD, aka, Proxy
-
-# Streaming services, comment out if you don't need
-DOMAIN-KEYWORD, sohu, DIRECT
-DOMAIN-KEYWORD, qiyi, DIRECT
 
 # Force some domains which are fucked by GFW while resolving DNS
 DOMAIN-KEYWORD, tumblr, Proxy, force-remote-dns
@@ -109,7 +169,100 @@ DOMAIN-KEYWORD, facebook, Proxy, force-remote-dns
 DOMAIN-KEYWORD, youtube, Proxy, force-remote-dns
 DOMAIN-KEYWORD, twitter, Proxy, force-remote-dns
 DOMAIN-KEYWORD, gmail, Proxy, force-remote-dns
+DOMAIN-KEYWORD, reddit, Proxy, force-remote-dns
 DOMAIN-SUFFIX, twimg.com, Proxy, force-remote-dns
+
+DOMAIN-KEYWORD, blogspot,Proxy
+DOMAIN-SUFFIX,amazonaws.com,Proxy
+DOMAIN-SUFFIX,android.com,Proxy
+DOMAIN-SUFFIX,angularjs.org,Proxy
+DOMAIN-SUFFIX,appspot.com,Proxy
+DOMAIN-SUFFIX,akamaihd.net,Proxy
+DOMAIN-SUFFIX,amazon.com,Proxy
+DOMAIN-SUFFIX,bit.ly,Proxy
+DOMAIN-SUFFIX,bitbucket.org,Proxy
+DOMAIN-SUFFIX,blog.com,Proxy
+DOMAIN-SUFFIX,blogcdn.com,Proxy
+DOMAIN-SUFFIX,blogger.com,Proxy
+DOMAIN-SUFFIX,blogsmithmedia.com,Proxy
+DOMAIN-SUFFIX,box.net,Proxy
+DOMAIN-SUFFIX,bloomberg.com,Proxy
+DOMAIN-SUFFIX,chromium.org,Proxy
+DOMAIN-SUFFIX,cl.ly,Proxy
+DOMAIN-SUFFIX,cloudfront.net,Proxy
+DOMAIN-SUFFIX,cloudflare.com,Proxy
+DOMAIN-SUFFIX,cocoapods.org,Proxy
+DOMAIN-SUFFIX,crashlytics.com,Proxy
+DOMAIN-SUFFIX,dribbble.com,Proxy
+DOMAIN-SUFFIX,dropbox.com,Proxy
+DOMAIN-SUFFIX,dropboxstatic.com,Proxy
+DOMAIN-SUFFIX,dropboxusercontent.com,Proxy
+DOMAIN-SUFFIX,docker.com,Proxy
+DOMAIN-SUFFIX,duckduckgo.com,Proxy
+DOMAIN-SUFFIX,digicert.com,Proxy
+DOMAIN-SUFFIX,dnsimple.com,Proxy
+DOMAIN-SUFFIX,edgecastcdn.net,Proxy
+DOMAIN-SUFFIX,engadget.com,Proxy
+DOMAIN-SUFFIX,eurekavpt.com,Proxy
+DOMAIN-SUFFIX,fb.me,Proxy
+DOMAIN-SUFFIX,fbcdn.net,Proxy
+DOMAIN-SUFFIX,fc2.com,Proxy
+DOMAIN-SUFFIX,feedburner.com,Proxy
+DOMAIN-SUFFIX,fabric.io,Proxy
+DOMAIN-SUFFIX,flickr.com,Proxy
+DOMAIN-SUFFIX,fastly.net,Proxy
+DOMAIN-SUFFIX,ggpht.com,Proxy
+DOMAIN-SUFFIX,github.com,Proxy
+DOMAIN-SUFFIX,github.io,Proxy
+DOMAIN-SUFFIX,githubusercontent.com,Proxy
+DOMAIN-SUFFIX,golang.org,Proxy
+DOMAIN-SUFFIX,goo.gl,Proxy
+DOMAIN-SUFFIX,gstatic.com,Proxy
+DOMAIN-SUFFIX,godaddy.com,Proxy
+DOMAIN-SUFFIX,gravatar.com,Proxy
+DOMAIN-SUFFIX,imageshack.us,Proxy
+DOMAIN-SUFFIX,imgur.com,Proxy
+DOMAIN-SUFFIX,jshint.com,Proxy
+DOMAIN-SUFFIX,ift.tt,Proxy
+DOMAIN-SUFFIX,itunes.com,Proxy
+DOMAIN-SUFFIX,j.mp,Proxy
+DOMAIN-SUFFIX,kat.cr,Proxy
+DOMAIN-SUFFIX,linode.com,Proxy
+DOMAIN-SUFFIX,linkedin.com,Proxy
+DOMAIN-SUFFIX,licdn.com,Proxy
+DOMAIN-SUFFIX,lithium.com,Proxy
+DOMAIN-SUFFIX,megaupload.com,Proxy
+DOMAIN-SUFFIX,mobile01.com,Proxy
+DOMAIN-SUFFIX,modmyi.com,Proxy
+DOMAIN-SUFFIX,mzstatic.com,Proxy
+DOMAIN-SUFFIX,nytimes.com,Proxy
+DOMAIN-SUFFIX,name.com,Proxy
+DOMAIN-SUFFIX,openvpn.net,Proxy
+DOMAIN-SUFFIX,openwrt.org,Proxy
+DOMAIN-SUFFIX,ow.ly,Proxy
+DOMAIN-SUFFIX,pinboard.in,Proxy
+DOMAIN-SUFFIX,ssl-images-amazon.com,Proxy
+DOMAIN-SUFFIX,sstatic.net,Proxy
+DOMAIN-SUFFIX,stackoverflow.com,Proxy
+DOMAIN-SUFFIX,staticflickr.com,Proxy
+DOMAIN-SUFFIX,squarespace.com,Proxy
+DOMAIN-SUFFIX,symcd.com,Proxy
+DOMAIN-SUFFIX,symcb.com,Proxy
+DOMAIN-SUFFIX,symauth.com,Proxy
+DOMAIN-SUFFIX,ubnt.com,Proxy
+DOMAIN-SUFFIX,thepiratebay.org,Proxy
+DOMAIN-SUFFIX,tumblr.com,Proxy
+DOMAIN-SUFFIX,twitch.tv,Proxy
+DOMAIN-SUFFIX,wikipedia.com,Proxy
+DOMAIN-SUFFIX,wikipedia.org,Proxy
+DOMAIN-SUFFIX,wikimedia.org,Proxy
+DOMAIN-SUFFIX,wordpress.com,Proxy
+DOMAIN-SUFFIX,wsj.com,Proxy
+DOMAIN-SUFFIX,wsj.net,Proxy
+DOMAIN-SUFFIX,wp.com,Proxy
+DOMAIN-SUFFIX,vimeo.com,Proxy
+DOMAIN-SUFFIX,youtu.be,Proxy
+DOMAIN-SUFFIX,ytimg.com,Proxy
 
 # Workaround for some apps
 # Instagram
